# padaria

./: README.md  app.py  pyproject.toml  requirements.txt  script.py
templates/: base.html  cadastrar.html  editar.html  index.html  produtos.html
